# crushy

./: CONTRIBUTING.md  Cargo.toml  README.md  build.rs  crushy.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  nightly-bump.yml
clippy_lints/: Cargo.toml
clippy_lints/src/: declared_lints.rs  deprecated_lints.rs  lib.rs
crushy_config/: Cargo.toml
crushy_config/src/: conf.rs  lib.rs  metadata.rs  types.rs
crushy_dev/: Cargo.toml
crushy_dev/src/: deprecate_lint.rs  dogfood.rs  edit_lints.rs  fmt.rs  generate.rs  lib.rs  lint.rs  main.rs  new_lint.rs  parse.rs  release.rs  serve.rs  sync.rs  utils.rs
crushy_dev/src/parse/: cursor.rs
crushy_dev/src/setup/: git_hook.rs  intellij.rs  toolchain.rs
crushy_lints/: Cargo.toml
crushy_lints/src/: container_align_helper.rs  container_combine_align.rs  declared_lints.rs  deep_path.rs  imported_message.rs  length_fill.rs  lib.rs  message_naming.rs  use_as_rename.rs
crushy_utils/: Cargo.toml  README.md
crushy_utils/src/: attrs.rs  check_proc_macro.rs  comparisons.rs  consts.rs  diagnostics.rs  eager_or_lazy.rs  higher.rs  hir_utils.rs  lib.rs  macros.rs  msrvs.rs  paths.rs  qualify_min_const_fn.rs  source.rs  str_utils.rs  sugg.rs  sym.rs  visitors.rs
crushy_utils/src/ast_utils/: mod.rs
crushy_utils/src/mir/: mod.rs
crushy_utils/src/ty/: mod.rs
crushy_utils/src/ty/type_certainty/: mod.rs
declare_crushy_lint/: Cargo.toml
declare_crushy_lint/src/: lib.rs
scripts/: bump-nightly.sh
scripts/hooks/: post-commit  pre-commit  pre-push
src/: driver.rs  main.rs  toolchain.rs
