[package]
name = "crushy"
version = "0.1.0"
authors = ["Andy Terra <tech@andyterra.com>"]
description = "iced-specific Rust lints"
repository = "https://github.com/airstrike/crushy"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["crushy", "lint", "iced"]
categories = ["development-tools", "development-tools::cargo-plugins"]
build = "build.rs"
edition = "2024"
publish = false

[[bin]]
name = "cargo-crushy"
test = false
path = "src/main.rs"

[[bin]]
name = "crushy-driver"
path = "src/driver.rs"

[dependencies]
crushy_config = { path = "crushy_config" }
crushy_lints = { path = "crushy_lints" }
crushy_utils = { path = "crushy_utils" }
declare_crushy_lint = { path = "declare_crushy_lint" }
rustc_tools_util = { path = "rustc_tools_util", version = "0.4.2" }
tempfile = { version = "3.20", optional = true }
termize = "0.2"
color-print = "0.3.4"
anstream = "0.6.18"

[build-dependencies]
rustc_tools_util = { path = "rustc_tools_util", version = "0.4.2" }

[features]
integration = ["dep:tempfile"]
jemalloc = []

[package.metadata.rust-analyzer]
# This package uses #[feature(rustc_private)]
rustc_private = true

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(bootstrap)']
