[package]
name = "clippy_lints"
version = "0.1.97"
description = "Lint definitions"
license = "MIT OR Apache-2.0"
edition = "2024"

[dependencies]
clippy_config = { path = "../clippy_config" }
clippy_utils = { path = "../clippy_utils" }
declare_clippy_lint = { path = "../declare_clippy_lint" }

[package.metadata.rust-analyzer]
rustc_private = true
