[package]
name = "crushy_lints"
version = "0.1.0"
description = "Lint definitions"
license = "MIT OR Apache-2.0"
edition = "2024"
authors = ["Andy Terra <tech@andyterra.com>"]
repository = "https://github.com/airstrike/crushy"

[dependencies]
crushy_config = { path = "../crushy_config" }
crushy_utils = { path = "../crushy_utils" }
declare_crushy_lint = { path = "../declare_crushy_lint" }

[package.metadata.rust-analyzer]
rustc_private = true
