[package]
name = "crushy_utils"
version = "0.1.0"
edition = "2024"
authors = ["Andy Terra <tech@andyterra.com>"]
description = "Helpful tools for writing lints, provided as they are used in Crushy"
repository = "https://github.com/airstrike/crushy"
license = "MIT OR Apache-2.0"
keywords = ["crushy", "lint", "utils"]
categories = ["development-tools"]

[dependencies]
arrayvec = { version = "0.7", default-features = false }
itertools = "0.12"
# FIXME(f16_f128): remove when no longer needed for parsing
rustc_apfloat = "0.2.0"
serde = { version = "1.0", features = ["derive"] }

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(bootstrap)']

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
