[package]
name = "declare_crushy_lint"
version = "0.1.0"
edition = "2024"
authors = ["Andy Terra <tech@andyterra.com>"]
repository = "https://github.com/airstrike/crushy"
license = "MIT OR Apache-2.0"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true
